--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Kenvifire's blog
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : kenvifire
+  email : kenvifly@gmail.com
+  github : kenvifire
+  twitter : mrwhite@163.com
+  feedburner : mrwhite@163.com
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://keivifire.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
