--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ ga_domain: itluobo.com
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: ""
-sidebar-avatar: /img/avatar-.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-kenvi.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
