--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,8 @@ duoshuo_share: true                     # set to false if you want to use Commen
 # Baidu Analytics
 ba_track_id: cd0d6be50841c320d2bed42464a08a7c
 # Google Analytics
-#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-#ga_domain: itluobo.com
+ga_track_id: 'UA-45702634-2'            # Format: UA-xxxxxx-xx
+ga_domain: itluobo.com
 
 
 
